--- a/PÁXINA_WEB3_GITHUB.html
+++ b/PÁXINA_WEB3_GITHUB.html
@@ -314,7 +314,7 @@
 
     <button id="corregir">Corregir</button>
 
-    <script src="app.js"></script>
+    <script src="app3.js"></script>
 </body>
 </html>
 
